--- a/src/app/pages/add-concert/add-concert.component.html
+++ b/src/app/pages/add-concert/add-concert.component.html
@@ -11,7 +11,7 @@
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-3">
             <label for="date">Fecha</label>
             <input type="date" class="form-control" id="date" formControlName="date">
             <div *ngIf="submitted && concertForm.controls['date'].invalid" class="text-danger">
@@ -19,15 +19,16 @@
             </div>
           </div>
 
-          <div class="form-group">
-            <label for="time">Hora</label>
+          <div class="form-group mt-3">
+            <label for="time">Hora<span class="form-optional">(hh:mm)</span></label>
+
             <input type="text" class="form-control" id="time" formControlName="time">
             <div *ngIf="submitted && concertForm.controls['time'].invalid" class="text-danger">
               La hora es obligatoria y no debe superar los 10 caracteres.
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-3">
             <label for="place">Lugar</label>
             <input type="text" class="form-control" id="place" formControlName="place">
             <div *ngIf="submitted && concertForm.controls['place'].invalid" class="text-danger">
@@ -35,7 +36,7 @@
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-3">
             <label for="desc">Descripción</label>
             <textarea class="form-control" id="desc" formControlName="desc"></textarea>
             <div *ngIf="submitted && concertForm.controls['desc'].invalid" class="text-danger">
@@ -44,15 +45,18 @@
           </div>
 
           <section>
-            <div class="form-group">
+            <div class="form-group mt-3">
               <label for="map">Ubicación</label>
-              <div id="map" style="height: 400px;"></div>
+                <div class="" style="overflow: hidden;border-radius: 1em;">
+                  <div id="map" style="height: 400px;"></div>
+                </div>
+                
               <input type="hidden" formControlName="latitude">
               <input type="hidden" formControlName="longitude">
             </div>
           </section>
 
-          <div class="form-group">
+          <div class="form-group mt-3">
             <label for="poster">Póster</label>
             <input type="file" class="form-control" id="poster" (change)="onFileChange($event)">
             <div *ngIf="submitted && concertForm.controls['poster'].invalid" class="text-danger">
@@ -60,7 +64,7 @@
             </div>
           </div>
           
-          <button type="submit" class="btn btn-primary w-100">Añadir Concierto</button>
+          <button type="submit" class="btn btn-primary btn-block w-100 btn-color-primary-tt mb-5 mt-5">Añadir Concierto</button>
           
           <div *ngIf="error_message" class="alert alert-danger mt-3">{{error_message}}</div>
         </form>
