--- a/src/app/pages/add-instrument/add-instrument.component.css
+++ b/src/app/pages/add-instrument/add-instrument.component.css
@@ -15,3 +15,12 @@
   font-size: 0.8em !important;
   opacity: 0.7;
 }
+
+@media (max-width: 578px) {
+    .title-form{
+        font-size: 6em !important;
+    }
+    .range_point{
+        font-size: 0.6em !important;
+    }
+}
