--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <main class="d-flex flex-column h-100 w-100 justify-content-center align-items-center main-login bg-black pt-5">
   <div class="container container-tt"> 
     <h1 class="my-4 title-form">Bienvenido</h1>
