--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -9,13 +9,29 @@
 .main-login{
   height: 100vh !important;
 }
+.editIcon{
+  width: 20%;
+}
 
 @media (min-width: 768px) {
   .form-login{
       width: 40%;
   }
+
 }
 
+@media (max-width: 768px) {
+  .bienvenido{
+    font-size: 5em !important;
+  }
+
+  .icono-bienvenido{
+    height: 6em;
+  }
+  #map{
+    height: 250px !important;
+  }
+}
 @media (max-width: 500px) {
   .title-form{
       font-size: 6em;
@@ -23,6 +39,15 @@
   .main-login{
       padding-top: 5em;
       justify-content: start !important;
+  }
+}
+
+@media (max-width: 415px) {
+  .bienvenido{
+    font-size: 4em !important;
+  }
+  .icono-bienvenido{
+    height: 4em;
   }
 }
 
