--- a/src/app/sharedComponents/concert/concert.component.html
+++ b/src/app/sharedComponents/concert/concert.component.html
@@ -1,4 +1,4 @@
-<article class="concert d-flex p-3 gap-2 rounded">
+<!-- <article class="concert d-flex p-3 gap-2 rounded">
     <section>
         <h3>{{concert.title}}</h3>
         <span class="subtitle-sm-tt">{{concert.date}}</span>
@@ -7,4 +7,25 @@
     <section>
         <img [src]="concert.poster" alt="Concierto" class="poster h-100">
     </section>
-</article>
+</article> -->
+
+
+  <div class="card mb-3 bg-secondary-tt text-light rounded-4 card-tt" style="overflow: hidden;" >
+    <div class="row g-0">
+      <div class="col-4">
+        <img [src]="concert.poster" class="img-fluid rounded-start h-100 img-card" alt="...">
+      </div>
+      <div class="col-8">
+        <div class="card-body">
+          <h4 class="card-title">{{concert.title}}</h4>
+          <span (click)="bandaDetalles()" class="subtitle-sm-tt">{{ concert.name }}</span>
+
+          <p class="card-text mt-3">{{concert.desc}}</p>
+          <p class="card-text">{{concert.date}}</p>
+
+          <button class="btn btn-light card-btn d-flex justify-content-center align-items-center" (click)="concertInfo()" data-bs-toggle="modal" data-bs-target="#concert">ver más</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
