--- a/src/app/pages/add-concert/add-concert.component.html
+++ b/src/app/pages/add-concert/add-concert.component.html
@@ -2,12 +2,14 @@
 <main class="d-flex flex-column w-100 justify-content-center align-items-center main-register bg-black">
     <div class="container container-tt text-white">
       <h1 class="mb-4 title-form">Añadir Concierto</h1>
+      <div *ngIf="error_message" class="alert alert-danger mt-3">{{error_message}}</div>
+
         <form [formGroup]="concertForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="title">Título</label>
             <input type="text" class="form-control" id="title" formControlName="title">
             <div *ngIf="submitted && concertForm.controls['title'].invalid" class="text-danger">
-              El título es obligatorio y no debe superar los 70 caracteres.
+              El título es obligatorio y debe tener entre 5 y 70 caracteres.
             </div>
           </div>
 
@@ -15,7 +17,7 @@
             <label for="date">Fecha</label>
             <input type="date" class="form-control" id="date" formControlName="date">
             <div *ngIf="submitted && concertForm.controls['date'].invalid" class="text-danger">
-              La fecha es obligatoria.
+              La fecha es obligatoria y debe tener el formato dd/mm/yyyy.
             </div>
           </div>
 
@@ -24,7 +26,7 @@
 
             <input type="text" class="form-control" id="time" formControlName="time">
             <div *ngIf="submitted && concertForm.controls['time'].invalid" class="text-danger">
-              La hora es obligatoria y no debe superar los 10 caracteres.
+              La hora es obligatoria y debe tener el formato hh:mm.
             </div>
           </div>
 
@@ -32,7 +34,7 @@
             <label for="place">Lugar</label>
             <input type="text" class="form-control" id="place" formControlName="place">
             <div *ngIf="submitted && concertForm.controls['place'].invalid" class="text-danger">
-              El lugar es obligatorio y no debe superar los 100 caracteres.
+              El lugar es obligatorio y no debe superar los 50 caracteres.
             </div>
           </div>
 
@@ -40,7 +42,7 @@
             <label for="desc">Descripción</label>
             <textarea class="form-control" id="desc" formControlName="desc"></textarea>
             <div *ngIf="submitted && concertForm.controls['desc'].invalid" class="text-danger">
-              La descripción no debe superar los 1000 caracteres.
+              La descripción no debe superar los 100 caracteres.
             </div>
           </div>
 
@@ -66,7 +68,6 @@
           
           <button type="submit" class="btn btn-primary btn-block w-100 btn-color-primary-tt mb-5 mt-5">Añadir Concierto</button>
           
-          <div *ngIf="error_message" class="alert alert-danger mt-3">{{error_message}}</div>
         </form>
       </div>
 
