--- a/src/app/pages/details-user-band/detalle.component.html
+++ b/src/app/pages/details-user-band/detalle.component.html
@@ -33,8 +33,8 @@
                     <h1 class="mb-0 name">{{respuesta.name}}</h1>
                     <div class="mt-4">
                         <h3 class="title-detalle pb-2 mb-3">Contacto:</h3>
-                        <p><i class="fa-regular fa-envelope m"></i><span class="mx-2">{{respuesta.email}}</span></p>
-                        <p><i class="fa-solid fa-phone"></i><span class="mx-2">{{respuesta.telephone}}</span></p>
+                        <p><i class="fa-regular fa-envelope color-primary"></i><span class="mx-2">{{respuesta.email}}</span></p>
+                        <p><i class="fa-solid fa-phone color-primary"></i><span class="mx-2">{{respuesta.telephone}}</span></p>
                     </div>
                     
                     <div class="mt-4">
@@ -48,10 +48,9 @@
 
         <article class="container mt-5">
             <h3 class="title-detalle pb-2 mb-3">Conciertos:</h3>
-            <section class="concert-list d-flex flex-nowrap gap-3">
+            <section class="row">
                 @for(concierto of respuesta.concerts; track respuesta.concerts){
-                    <app-concert [concert]="concierto" class="concert"></app-concert>
-
+                    <app-concert [concert]="concierto" class="concert col-12 col-md-6"></app-concert>
                 }
             </section>
         </article>
