--- a/src/app/sharedComponents/request/request.component.html
+++ b/src/app/sharedComponents/request/request.component.html
@@ -1,4 +1,4 @@
-<article class="request p-3 rounded">
+<article class="request p-3 rounded-4">
     <section>
       <h3>{{ request.title }}</h3>
       <span class="subtitle-sm-tt" (click)="bandDetalles()">{{ request.name }}</span>
