--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,8 +34,7 @@
           <div class="card-body h-auto">
             <h2 class="title-xl">Conciertos</h2>
             <p class="card-text">Encuentra conciertos cercanos para ti para tener siempre un buen plan</p>
-              <button class="btn btn-light">Buscar</button>
-            </div>
+            <a [routerLink]="['/registrate']" routerLinkActive="router-link-active" class="btn btn-light">Buscar</a>            </div>
       </section>
   </section>
 </main>
