--- a/src/app/pages/register-band/register-band.component.html
+++ b/src/app/pages/register-band/register-band.component.html
@@ -9,7 +9,7 @@
       <div>
         <h4>¿Hay mas miembros a tu banda?</h4>
         <div class="d-flex gap-5 justify-content-center">
-          <a class="btn btn-primary w-50 btn-color-primary-tt" [routerLink]="['/nuevo-miembro']" routerLinkActive="router-link-active" >Agregar miembro</a>
+          <a class="btn btn-primary w-50 btn-color-primary-tt" [routerLink]="['/miembros']" routerLinkActive="router-link-active" >Agregar miembro</a>
           <a class="btn btn-primary w-50 btn-color-secondary-tt" [routerLink]="['/home-usuario']" routerLinkActive="router-link-active" >Finalizar</a>
         </div>
       </div>
