--- a/src/app/sharedComponents/concert/concert.component.html
+++ b/src/app/sharedComponents/concert/concert.component.html
@@ -18,7 +18,7 @@
       <div class="col-8">
         <div class="card-body">
           <h4 class="card-title text-truncate">{{concert.title}}</h4>
-          <span (click)="bandaDetalles()" class="subtitle-sm-tt">{{ concert.name }}</span>
+          <span (click)="bandaDetalles()" class="subtitle-sm-tt pointer-tt">{{ concert.name }}</span>
 
           <p class="card-text mt-3 text-truncate">{{concert.desc}}</p>
           <p class="card-text">{{concert.date}}</p>
