--- a/src/app/sharedComponents/request/request.component.html
+++ b/src/app/sharedComponents/request/request.component.html
@@ -1,7 +1,7 @@
 <article class="request p-3 rounded-4">
     <section>
       <h3>{{ request.title }}</h3>
-      <span class="subtitle-sm-tt" (click)="bandDetalles()">{{ request.name }}</span>
+      <span class="subtitle-sm-tt pointer-tt" (click)="bandDetalles()">{{ request.name }}</span>
     </section>
     <section>
       <section>
