--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,9 @@ body{
 
 }
   
-
+.pointer-tt{
+    cursor: pointer;
+}
 .btn-color-secondary-tt{
     background-color: #153563 !important;
     border: none;
