--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -95,7 +95,7 @@
         <!-- <span class="form-optional">(opcional)</span> -->
         @if(editUser){
           <section class="editIcon">
-            <img [src]="iconUser" class="w-100">
+            <img [src]="iconUser" class="w-100 rounded-circle">
           </section>
         }
          <section>
